# phoneme-to-words-lm

./: .gitignore  README.md  env_setup.sh  pyproject.toml  requirements.txt
examples/: example_hotwords.yaml  fake_logits_demo.py
flashlight_text/flashlight/lib/text/decoder/: Trie.h
ngram/: README.md  example_config.yaml  text_normalize.py  train_ngram_lm.py
phoneme_to_words_lm/: __init__.py  decoder.py  download_5gram.py  finetune_llm.py  sweep_utils.py  utils.py
sweep/: example_lm_sweep.yaml  example_lm_sweep_grid.yaml  lm_sweep.py  lm_sweep_worker.py
